docs/vocabulary-synopsis/_sources/type/Relation/v1/index.rst.txt
:orphan:

Relation (v1)
=============

.. warning::
   This is not the latest version. The latest version is :doc:`v5 <../v5/index>`.

**Previous Version:** none *(this is the oldest version)*

**URI:** `http://clams.ai/vocabulary/type/Relation/v1 <http://clams.ai/vocabulary/type/Relation/v1>`_

**Shortname:** ``Relation``

**Inherits from:** :doc:`Annotation (v2) <../../Annotation/v2/index>`

**Included in vocabulary versions:** :doc:`1.0.0 <../../../1.0.0/index>`, :doc:`1.0.1 <../../../1.0.1/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/Relation/v1 <http://mmif.clams.ai/vocabulary/Relation/v1>`_
- `http://mmif.clams.ai/0.4.0/vocabulary/Relation/ <http://mmif.clams.ai/0.4.0/vocabulary/Relation/>`_
- `http://mmif.clams.ai/0.4.1/vocabulary/Relation/ <http://mmif.clams.ai/0.4.1/vocabulary/Relation/>`_
- `http://mmif.clams.ai/0.4.2/vocabulary/Relation/ <http://mmif.clams.ai/0.4.2/vocabulary/Relation/>`_


Description
-----------

Any relationship between two or more annotation types. For texts could be a grammatical relation such as subject-object, a semantic relation between meanings or roles, or a temporal relation indicating the simultaneity or ordering in time of events or states. For image regions and video objects this could involve spatial relations or part-whole relations.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 15 10 15 60

   * - Property
     - Type
     - Origin
     - Description
   * - ``document``
     - string
     - :doc:`Annotation (v2) <../../Annotation/v2/index>`
     - The identifier of the document that the annotation is over. `(more) <#document>`__

   * - ``id`` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the ... `(more) <#id>`__



Inherited from :doc:`Annotation (v2) <../../Annotation/v2/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


document
""""""""

- type: *string*
- required: no

The identifier of the document that the annotation is over.


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


id
""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }